# teensy.build

./: LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
libs/Audio/: Makefile.am
libs/SD/: Makefile.am
libs/SPI/: Makefile.am
libs/SerialFlash/: Makefile.am
libs/TeensyThreads/: Makefile.am
libs/Wire/: Makefile.am
libs/cores/teensy3/: Makefile.am
