noinst_LIBRARIES = libaudio.a

AM_CPPFLAGS=\
 -I$(top_srcdir)/libs/cores/teensy3 -Iutility\
 -I$(top_srcdir)/libs/Wire\
 -I$(top_srcdir)/libs/SPI\
 -I$(top_srcdir)/libs/SD\
 -I$(top_srcdir)/libs/SerialFlash

libaudio_a_SOURCES=\
 analyze_fft1024.cpp\
 analyze_fft1024.h\
 analyze_fft256.cpp\
 analyze_fft256.h\
 analyze_notefreq.cpp\
 analyze_notefreq.h\
 analyze_peak.cpp\
 analyze_peak.h\
 analyze_print.cpp\
 analyze_print.h\
 analyze_rms.cpp\
 analyze_rms.h\
 analyze_tonedetect.cpp\
 analyze_tonedetect.h\
 AudioControl.h\
 Audio.h\
 control_ak4558.cpp\
 control_ak4558.h\
 control_cs42448.cpp\
 control_cs42448.h\
 control_cs4272.cpp\
 control_cs4272.h\
 control_sgtl5000.cpp\
 control_sgtl5000.h\
 control_wm8731.cpp\
 control_wm8731.h\
 data_ulaw.c\
 data_waveforms.c\
 data_windows.c\
 effect_bitcrusher.cpp\
 effect_bitcrusher.h\
 effect_chorus.cpp\
 effect_chorus.h\
 effect_delay.cpp\
 effect_delay_ext.cpp\
 effect_delay_ext.h\
 effect_delay.h\
 effect_envelope.cpp\
 effect_envelope.h\
 effect_fade.cpp\
 effect_fade.h\
 effect_flange.cpp\
 effect_flange.h\
 effect_midside.cpp\
 effect_midside.h\
 effect_multiply.cpp\
 effect_multiply.h\
 effect_reverb.cpp\
 effect_reverb.h\
 effect_waveshaper.cpp\
 effect_waveshaper.h\
 filter_biquad.cpp\
 filter_biquad.h\
 filter_fir.cpp\
 filter_fir.h\
 filter_variable.cpp\
 filter_variable.h\
 input_adc.cpp\
 input_adc.h\
 input_adcs.cpp\
 input_adcs.h\
 input_i2s.cpp\
 input_i2s.h\
 input_i2s_quad.cpp\
 input_i2s_quad.h\
 input_tdm.cpp\
 input_tdm.h\
 keywords.txt\
 library.json\
 library.properties\
 memcpy_audio.h\
 memcpy_audio.S\
 mixer.cpp\
 mixer.h\
 output_dac.cpp\
 output_dac.h\
 output_dacs.cpp\
 output_dacs.h\
 output_i2s.cpp\
 output_i2s.h\
 output_i2s_quad.cpp\
 output_i2s_quad.h\
 output_pt8211.cpp\
 output_pt8211.h\
 output_pwm.cpp\
 output_pwm.h\
 output_spdif.cpp\
 output_spdif.h\
 output_tdm.cpp\
 output_tdm.h\
 play_memory.cpp\
 play_memory.h\
 play_queue.cpp\
 play_queue.h\
 play_sd_raw.cpp\
 play_sd_raw.h\
 play_sd_wav.cpp\
 play_sd_wav.h\
 play_serialflash_raw.cpp\
 play_serialflash_raw.h\
 record_queue.cpp\
 record_queue.h\
 spi_interrupt.cpp\
 spi_interrupt.h\
 synth_dc.cpp\
 synth_dc.h\
 synth_karplusstrong.cpp\
 synth_karplusstrong.h\
 synth_pinknoise.cpp\
 synth_pinknoise.h\
 synth_pwm.cpp\
 synth_pwm.h\
 synth_simple_drum.cpp\
 synth_simple_drum.h\
 synth_sine.cpp\
 synth_sine.h\
 synth_tonesweep.cpp\
 synth_tonesweep.h\
 synth_waveform.cpp\
 synth_waveform.h\
 synth_waveform.md\
 synth_whitenoise.cpp\
 synth_whitenoise.h\
 utility/sqrt_integer.c

