noinst_LIBRARIES = libsd.a

AM_CPPFLAGS=-I$(top_srcdir)/libs/cores/teensy3 -Iutility -I$(top_srcdir)/libs/SPI

libsd_a_SOURCES =\
 cache_t3.cpp\
 card_t3.cpp\
 dir_t3.cpp\
 fat_t3.cpp\
 File.cpp\
 file_t3.cpp\
 init_t3.cpp\
 SD.cpp\
 SD.h\
 SD_t3.h \
 utility/SdFile.cpp \
 utility/SdVolume.cpp \
 utility/Sd2Card.cpp
