noinst_LIBRARIES = libteensy3_core.a

libteensy3_core_a_SOURCES =\
 analog.c\
 AudioStream.cpp AudioStream.h\
 avr_emulation.cpp avr_emulation.h\
 DMAChannel.cpp DMAChannel.h\
 eeprom.c\
 HardwareSerial1.cpp\
 HardwareSerial2.cpp\
 HardwareSerial3.cpp\
 HardwareSerial4.cpp\
 HardwareSerial5.cpp\
 HardwareSerial6.cpp\
 IntervalTimer.cpp IntervalTimer.h\
 IPAddress.cpp IPAddress.h\
 keylayouts.c keylayouts.h\
 kinetis.h\
 math_helper.c math_helper.h\
 mk20dx128.c mk20dx128.h\
 new.cpp new.h\
 nonstd.c\
 pins_teensy.c\
 Print.cpp Print.h\
 serial1.c\
 serial2.c\
 serial3.c\
 serial4.c\
 serial5.c\
 serial6.c\
 serial6_lpuart.c\
 ser_print.c ser_print.h\
 Stream.cpp Stream.h\
 Tone.cpp\
 touch.c\
 usb_audio.cpp usb_audio.h\
 usb_desc.c usb_desc.h\
 usb_dev.c usb_dev.h\
 usb_flightsim.cpp usb_flightsim.h\
 usb_inst.cpp\
 usb_joystick.c usb_joystick.h\
 usb_keyboard.c usb_keyboard.h\
 usb_mem.c usb_mem.h\
 usb_midi.c usb_midi.h\
 usb_mouse.c usb_mouse.h\
 usb_mtp.c usb_mtp.h\
 usb_rawhid.c usb_rawhid.h\
 usb_seremu.c usb_seremu.h\
 usb_serial.c usb_serial.h\
 usb_touch.c usb_touch.h\
 WMath.cpp\
 WString.cpp WString.h\
 yield.cpp EventResponder.cpp


